force-app/main/default/objects/Account/fields/add123__c.field-meta.xml
<CustomField>
    <fullName>add123__c</fullName>
    <label>add123</label>
    <type>Date</type>
</CustomField>