force-app/main/default/objects/Account/fields/add_del__c.field-meta.xml
<CustomField>
    <fullName>add_del__c</fullName>
    <label>add del</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>