force-app/main/default/objects/Account/fields/Aug28fiel1__c.field-meta.xml
<CustomField>
    <fullName>Aug28fiel1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aug28fiel1</label>
    <type>Checkbox</type>
</CustomField>