force-app/main/default/objects/Account/fields/aug5email__c.field-meta.xml
<CustomField>
    <fullName>aug5email__c</fullName>
    <label>aug5email</label>
    <type>Email</type>
</CustomField>