force-app/main/default/objects/Account/fields/dec10email__c.field-meta.xml
<CustomField>
    <fullName>dec10email__c</fullName>
    <label>dec10email</label>
    <type>Email</type>
</CustomField>