force-app/main/default/objects/Account/fields/Demo_Nov__c.field-meta.xml
<CustomField>
    <fullName>Demo_Nov__c</fullName>
    <label>Demo Nov</label>
    <length>254</length>
    <type>Text</type>
</CustomField>