force-app/main/default/objects/Account/fields/demoadddelete__c.field-meta.xml
<CustomField>
    <fullName>demoadddelete__c</fullName>
    <label>demoadddelete</label>
    <type>Date</type>
</CustomField>