force-app/main/default/objects/Account/fields/ET2Field1__c.field-meta.xml
<CustomField>
    <fullName>ET2Field1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ET2Field1</label>
    <type>Checkbox</type>
</CustomField>