force-app/main/default/objects/Account/fields/ETField1__c.field-meta.xml
<CustomField>
    <fullName>ETField1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ETField1</label>
    <type>Checkbox</type>
</CustomField>