force-app/main/default/objects/Account/fields/june30checkbox__c.field-meta.xml
<CustomField>
    <fullName>june30checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>june30checkbox</label>
    <type>Checkbox</type>
</CustomField>