force-app/main/default/objects/Account/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Extra Notes</label>
    <length>254</length>
    <type>Text</type>
</CustomField>